Estructura básica de la web terminada
- Sin identificacion ni nada
- Lo importante ahora es:
-- sistema CRUD para los asesoramientos
-- sistema de creación de docs en base a los informes
-- sistema de creación de carpetas

--- a/udaic_blog/templates/udaic_blog/base.html
+++ b/udaic_blog/templates/udaic_blog/base.html
@@ -1,20 +1,6 @@
 {% extends 'base.html' %}
 {% load i18n %}
 
+{#{% block title %}{% trans "UdAIC" %}{% endblock %}#}
+{#{% block page_title %}{% trans "UdAIC Blog" %}{% endblock %}#}
 
-{% block title %}
-    {% if title %}
-        <title> {{ title }} </title>
-    {% else %}
-        <title> UdAIC </title>
-    {% endif %}
-{% endblock title %}
-
-{% block page_title %}{% trans "UdAIC Blog" %}{% endblock %}
-
-  <body class="valign-wrapper2">
-      {% block sidebar %}{% endblock %}
-      <div class="{% block container_class %}container expand-on-small-only{% endblock %}">
-          {% block content %}{% endblock %}
-      </div>
-  </body>
