--- a/udaic_blog/templates/udaic_blog/home.html
+++ b/udaic_blog/templates/udaic_blog/home.html
@@ -1,9 +1,5 @@
 {% extends './base.html' %}
 
 {% block content %}
-<div class="card">
-    <div class="card-content">
-        {{ form }}
-    </div>
-</div>
+    <h1> Blog de investigación </h1>
 {% endblock %}
