--- a/templates/base.html
+++ b/templates/base.html
@@ -1,17 +1,18 @@
 {% load i18n static %}
 {% get_current_language as LANGUAGE_CODE %}
 <!DOCTYPE html>{% load static %}
+<!doctype html>
 <html lang="en">
   <head>
-    {% block head %}
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
-        {% block turbolinks-cache-control %}<meta name="turbolinks-cache-control" content="no-cache">{% endblock %}
+        <!--Import Google Icon Font-->
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <!--Import materialize.css-->
+      <link type="text/css" rel="stylesheet" href="{% static 'materialize/css/materialize.min.css' %}"  media="screen,projection"/>
+  <link type="text/css" rel="stylesheet" href="{% static 'udaic/css/udaic_main.css' %}"/>
 
-        {% block favicon %}<link href="{% static './imgs/favicon.png' %}" rel="shortcut icon">{% endblock %}
-        {% block css %}{% include './includes/material_css.html' %}{% endblock css %}
-        {% block js %}{% include './includes/material_js.html' %}{% endblock js %}
+      <!--Let browser know website is optimized for mobile-->
+      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    {% block head %}
         {% block title %}
             {% if title %}
                 <title> {{ title }} </title>
@@ -19,90 +20,104 @@
                 <title> UdAIC </title>
             {% endif %}
         {% endblock title %}
-        {% block extrahead %}{% endblock %}
-    {% endblock head %}
+    {% endblock %}
   </head>
-     <body class="valign-wrapper2">
-     <header>
-         {% block header %}
-            <dmc-sidenav>
-                <ul id="slide-out" class="sidenav sidenav-fixed">
-                    {% block sidenav_header %}
-                    <li>
-                        <div class="user-view">
-                            <div class="background" >
-                              <img src="{% static 'material/imgs/sidenav.svg' %}">
-                            </div>
-                            {% block userphoto %}
-                            {% if user.photo.url %}
-                            <a href="#"><img class="circle" src="{{ user.photo.url }}"></a>
+  <body>
+    {% block header %}
+        <header>
+            <nav class="top-nav indigo darken-2">
+                <div class="container">
+                  <div class="nav-wrapper">
+                    <div class="row">
+                      <div class="col s12 m10 offset-m1">
+                        {% block page_title %}
+                            {% if page_title %}
+                                <h1 class="header">{{ page_title }}</h1>
                             {% else %}
-                            <a href="#"><img class="circle" src="{% static 'material/imgs/user.png' %}"></a>
+                                <h1 class="header">UdAIC</h1>
                             {% endif %}
-                            {% endblock %}
-                            <a href="#"><span class="white-text name">{{ request.user.get_username|title }}</span></a>
-                            <a href="#"><span class="white-text email">{{ request.user.email }}</span></a>
-                        </div>
-                    </li>
-                    {% endblock %}
-                    {% block sidenav_items %}
-                    {% for module in modules %}
-                    {% if current_module == module %}
-                    <li class="active">
-                        <ul class="collapsible collapsible-accordion">
-                            <li>
-                                <a href="{{ module.index_url }}" class="collapsible-header active">{{ module.verbose_name }}{{ module.icon|safe }}</a>
-                                <div class="collapsible-body" style="display:block">
-                                    {% include module.menu %}
-                                </div>
-                            </li>
-                        </ul>
-                    </li>
-                    {% else %}
-                    <li {% if forloop.last %}class="last"{% endif %}>
-                        <a href="{{ module.index_url }}" class="collapsible-header" data-turbolinks="false">{{ module.verbose_name }}{{ module.icon|safe }}</a>
-                    </li>
-                    {% endif %}
-                    {% endfor %}
-                    {% endblock sidenav_items %}
-                </ul>
-            </dmc-sidenav>
-        {% endblock header%}
-     </header>
-     <main>
-        {% block main %}
-        {% block topbar %}
-        <nav class="topbar">
-            <div class="nav-wrapper">
-                <dmc-sidenav-trigger><a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a></dmc-sidenav-trigger>
-                <div class="brand-logo">
-                    {% block page_title %}{% endblock %}
+                        {% endblock page_title %}
+                      </div>
+                    </div>
+                  </div>
                 </div>
-                <ul id="nav-mobile" class="right hide-on-med-and-down">
-                    {% block topbar_links %}
-                    {% if user.is_authenticated %}
-{#                    <li><a href="{% url 'logout' %}" data-turbolinks="false"><i class="material-icons right">exit_to_app</i>{% trans "Log out" %}</a></li>#}
-                    {% else %}
-{#                    <li><a href="{% url 'login' %}" data-turbolinks="false"><i class="material-icons right">lock_open</i>{% trans "Log in" %}</a></li>#}
-                    {% endif %}
-                    {% endblock %}
-                </ul>
+            </nav>
+            <div class="container">
+                <a href="#" data-target="nav-mobile" class="top-nav sidenav-trigger full hide-on-large-only" style=""><i class="material-icons">menu</i></a>
             </div>
-        </nav>
-        {% endblock topbar %}
-        {% block breadcrumbs %}
-        <nav class="breadcrumbs">
-            <div class="nav-wrapper">
-                {% block breadcrumbs_items %}{% endblock %}
+            <ul id="nav-mobile" class="sidenav sidenav-fixed" style="transform: translateX(-105%);">
+                <li class="Logo">
+                    <a href="#" id="Logo-container" class="brand-logo"><img src="{% static 'udaic/img/UDAIC_transparent.png' %}" alt="Logo UdAIC"/> </a>
+                </li>
+                <li class="bold"><a href="{% url 'home' %}" class="waves-effect waves-indigo">UdAIC</a></li>
+                <li class="no-padding">
+                  <ul class="collapsible collapsible-accordion">
+                    <li class="bold"><a class="collapsible-header waves-effect waves-indigo" tabindex="0">Servicios</a>
+                      <div class="collapsible-body">
+                        <ul>
+                          <li><a href="{% url 'udaic_support_sessions:asesoramientos_home' %}">Asesoramientos</a></li>
+                          <li><a href="grid.html">Formacion</a></li>
+                        </ul>
+                      </div>
+                    </li>
+                  </ul>
+                </li>
+            </ul>
+
+        </header>
+{#        <nav class="indigo darken-2">#}
+{#            <div class="nav-wrapper">#}
+{#              <a href="#" class="Logo"><img src="{% static 'udaic/img/UDAIC_transparent.png' %}" alt="Logo UdAIC"/> </a>#}
+{#              <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>#}
+{#              <ul class="right hide-on-med-and-down">#}
+{#                <li><a href="sass.html">Sass</a></li>#}
+{#                <li><a href="badges.html">Components</a></li>#}
+{#                <li><a href="collapsible.html">Javascript</a></li>#}
+{#                <li><a href="mobile.html">Mobile</a></li>#}
+{#              </ul>#}
+{#            </div>#}
+{#        </nav>#}
+{##}
+{#        <ul class="sidenav sidenav-fixed" id="mobile-demo">#}
+{#            <li><a href="sass.html">Sass</a></li>#}
+{#            <li><a href="badges.html">Components</a></li>#}
+{#            <li><a href="collapsible.html">Javascript</a></li>#}
+{#            <li><a href="mobile.html">Mobile</a></li>#}
+{#        </ul>#}
+
+
+
+    {% endblock header %}
+    <main>
+        <div class="container">
+            <!-- Page Layout here -->
+            <div class="row">
+
+              <div class="col s12 m4 l3"> <!-- Note that "m4 l3" was added -->
+                <!-- Grey navigation panel
+
+                      This content will be:
+                  3-columns-wide on large screens,
+                  4-columns-wide on medium screens,
+                  12-columns-wide on small screens  -->
+
+              </div>
+
+              <div class="col s12 m8 l9"> <!-- Note that "m8 l9" was added -->
+                {% block content %}
+                {% endblock %}
+              </div>
+
             </div>
-        </nav>
-        {% endblock %}
-        {% block main_content %}
-        <div class="content">
-            {% block content %}{% endblock %}
-        </div>
-        {% endblock main_content %}
-        {% endblock main %}
+    </div>
+
     </main>
+
+
+    <!--JavaScript at end of body for optimized loading-->
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="{% static 'materialize/js/materialize.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'udaic/js/udaic_main.js' %}"></script>
+
   </body>
 </html>
