Creation user form hecho y funcionando, debería separar el template

--- a/static/udaic/css/udaic_main.css
+++ b/static/udaic/css/udaic_main.css
@@ -1,3 +1,8 @@
+/*===================================== iconos =====================================*/
+.material-icons.md-18 { font-size: 18px; }
+.material-icons.md-24 { font-size: 24px; }
+.material-icons.md-36 { font-size: 36px; }
+.material-icons.md-48 { font-size: 48px; }
 /*===================================== SIDE BAR =====================================*/
 ul.sidenav.sidenav-fixed li.Logo img{
     width: 100%;
@@ -6,8 +11,8 @@ ul.sidenav.sidenav-fixed li.Logo img{
 
 ul.sidenav.sidenav-fixed li.Logo {
     text-align: center;
-    margin-top: 32px;
-    margin-bottom: 160px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 #Logo-container {
